file(GLOB SRCS "*.c" "*.cpp")
file(GLOB PUBLIC_HEADERS "*.h")

set(SRCS ${SRCS} ${PUBLIC_HEADERS})
set(LIBS )

__add_real_target(tinyxml lib SOURCE ${SRCS} DEF ${DEFS} LIB ${LIBS})

INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} DESTINATION include/ FILES_MATCHING PATTERN "*.h")
set_property(TARGET tinyxml PROPERTY INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR})
